# pandemic-simulation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO  main.cpp  modelposition.hpp  simulation.conf
Controller/: Simulation.cpp
Model/: Pandemic.cpp  Pandemic.hpp  Person.cpp  Person.hpp  Population.cpp  Population.hpp  Position.cpp  Position.hpp
Model1/: Pandemic.cpp  Pandemic.hpp  Person.hpp  Position.cpp
View/: ConsoleInterface.cpp
controller/: simulation.cpp  simulation.hpp
model/: Pandemic.cpp  Person.cpp  PersonState.cpp  PersonState.hpp  Population.cpp  Position.cpp  pandemic.cpp  pandemic.hpp  person.cpp  person.hpp  population.cpp  population.hpp  position.cpp
test/: pandemic.test.cpp  population.test.cpp  simulation.test.cpp
view/: consoleInterface.cpp  consoleInterface.hpp
